# comfyui-prompt-bank

./: .gitignore  README.md  __init__.py  pyproject.toml
js/: main.js  presetUI.js  promptUI.js  promptmenu.js  treeData.js  treeRenderer.js
