[project]
name = "comfyui-prompt-bank"
description = "A prompt manager on the sidebar for ComfyUI, allowing easy saving and copying of prompts. "
version = "0.0.1"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/Cyrus-Hei/comfyui-prompt-bank"

[tool.comfy]
PublisherId = "cyrus-hei"
DisplayName = "comfyui-prompt-bank"
Icon = ""